--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="small-7 columns">
+<div class="large-12 columns header">
+  <div class="large-7 columns">
     <h3>Welcome to Scrappy.be</h3>
       <p class="lead">Connect with like minded people to share and discover the links that matter to you.</p>
       <ul class="no-bullet">
@@ -10,7 +10,8 @@
         <li><span class="label">5</span>  Contemplate existence.</li>
       </ul>
   </div>
-  <div class="small-5 columns">
+  <div class="large-5 columns">
     <h3> Sign up </h3>
     <%= render 'devise/registrations/new' %>
+  </div>
 </div>
