--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -6,5 +6,5 @@
       <%= f.input :password, label: false, :required => true, :input_html => { placeholder: "Password" } %>
       <%= f.input :password_confirmation, label: false, :required => true, :input_html => { placeholder: "Confirm Password" } %>
       <% f.error :base %>
-      <%= f.button :submit, "Sign up", :class => 'button' %>
+      <%= f.button :submit, "Sign up", :class => 'button small' %>
       <% end %>
