--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,22 @@
-<div class="row bottom-padding">
-<div class="small-12 columns">
-  <h2>Sign up</h2>
+<div class="large-12 columns">
+  <h4>Sign up</h4>
 </div>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="small-12 columns">
-    <div class="small-4 columns">
+  <div class="large-12 columns">
+    <div class="large-4 columns">
       <%= f.input :name, label: false, :required => true, :autofocus => true, :input_html => { placeholder: "First name" } %>
       <%= f.input :email, label: false, :required => true, :input_html => { placeholder: "Email" } %>
       <%= f.input :password, label: false, :required => true, :input_html => { placeholder: "Password" } %>
       <%= f.input :password_confirmation, label: false, :required => true, :input_html => { placeholder: "Confirm Password" } %>
       <% f.error :base %>
-      <%= f.button :submit, "Sign up", :class => 'button' %>
+      <%= f.button :submit, "Sign up", :class => 'small button' %>
       <% end %>
     </div>
   </div>
 
-<div class="small-12 columns">
+<div class="large-12 columns">
   <%= render "devise/shared/links" %>
-</div>
 </div>
