--- a/app/views/topics/new.js.erb
+++ b/app/views/topics/new.js.erb
@@ -1,4 +1,4 @@
-$('#new_topic').html('<%=j render(:partial => 'form') %>');
+$('#topic_form').html('<%=j render(:partial => 'form') %>');
 
 var remove_topic_form = function () {
   $('#new_topic').remove();
