--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -1,7 +1,9 @@
 <div class="large-12 columns header">
-  <div class="large-8 columns">
-      <h3><%= link_to @group.name, @group %> <small><%= @group.description %></small></h3>
+  <div class="large-7 columns">
+    <h3><%= link_to @group.name, @group %> <small><%= @group.description %></small></h3>
   </div>
-  <hr>
+  <div class="large-5 columns">
+    <%= render :partial => "items/new" %>
+  </div>
 </div>
 
