--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -7,7 +7,7 @@
   <div class="large-12 columns">
     <div class="small-5 columns">
 	     <h4>Edit Link</h4>
-	     <%= render 'form' %>
+	     <%= render 'edit' %>
 	     <p><%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %></p>
     </div>
   </div>
