--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <body>
     <%= render 'layouts/navigation' %>
 
-    <div class="large-12 columns grey">
+    <div class="large-12 columns grey <%= params[:controller] + params[:action] %>">
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, id: "flash_#{name}" %>
         <% end %>
