--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -3,7 +3,7 @@
     <h3><%= link_to @group.name, @group %> <small><%= @group.description %></small></h3>
   </div>
   <div class="large-5 columns">
-    <%= render :partial => "items/new" %>
+    <%= render :partial => "items/create" %>
   </div>
 </div>
 
