--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -2,6 +2,10 @@
   margin: 0px;
 }
 
+.bottom-padding {
+  padding-bottom: 100px;
+}
+
 .margin-left {
   margin-left: 7px;
 }
@@ -21,10 +25,6 @@ a {
 
 .center {
   text-align: center;
-}
-
-.panel.callout {
-  border-radius: 5px;
 }
 
 .header {
@@ -52,6 +52,7 @@ ul.dropdown {
 
 .panel.callout {
   background: #f18d05;
+  border-radius: 5px;
 }
 
 ul li p {
@@ -69,13 +70,17 @@ ul li p {
   background: #efeff2;
 }
 
+.item_show {
+  background: #fff;
+}
+
 #sidebar {
   background: #1b1d24;
   height: 2000px;
   color: #656a74;
   padding: 25px 20px 50px 20px;
   overflow: hidden;
-  margin-left: -30px;
+  margin-left: -20px;
   border-radius: 0 0 5px 0;
 
   a {
