--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,28 +1,21 @@
-  <div class="large-2 columns">
-    <%= render 'topics/topics' %>
-  </div>
+<h4> All links </h4>
 
-  <div class="large-10 columns">
-    <%= render 'groups/header' %>
-    <div class="large-12 columns">
-      <h4> All links </h4>
-    </div>
-
-    <% @group.items.each do |item| %>
-    <div class="large-3 columns box">
-      <ul class="no-bullet">
-        <li><p><%= link_to item.title, item.url %> <small><em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></p></li>
-        <li><p><%= truncate(item.description, length: 95) %><p></li>
-          <ul class="no-bullet inline-list">
-            <li><%= link_to 'comments', group_item_path(@group, item) %></li>
-            <li><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></li>
-          </ul>
+<% @group.items.each do |item| %>
+  <div class="large-3 columns">
+    <div class="box">
+    <ul class="no-bullet">
+      <li><p><%= link_to item.title, item.url %> <small><em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></p></li>
+      <li><p><%= truncate(item.description, length: 95) %><p></li>
+        <ul class="no-bullet inline-list">
+          <li><%= link_to 'comments', group_item_path(@group, item) %></li>
+          <li><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></li>
+        </ul>
       </ul>
     </div>
-    <% end %>
+  </div>
+<% end %>
 
-    <div class="small-12 columns">
-     <hr>
-      <%= link_to "Back to #{@group.name}", @group %>
-    </div>
+<div class="large-12 columns">
+  <hr>
+  <%= link_to "Back to #{@group.name}", @group %>
 </div>
