fixed profile page, removed redundant variables from controllers and tidied up views

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,7 @@
+h4 {
+  padding: 0.7%;
+}
+
 .sub-nav {
   margin: 0px;
 }
@@ -72,6 +76,8 @@ ul li p {
 
 .item_show {
   background: #fff;
+  margin: 5% 15% 0 15%;
+  padding: 5%;
 }
 
 #sidebar {
