--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body class="grey <%= 'item_show' if current_page? group_item_path %>">
+  <body class="grey">
     <%= render 'layouts/navigation' %>
 
     <div class="large-2 columns">
