--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,5 @@
-<h4> All links </h4>
+<div class="large-12 columns">
+  <h4> All links </h4>
 
 <% @group.items.each do |item| %>
   <div class="large-3 columns">
@@ -14,6 +15,7 @@
     </div>
   </div>
 <% end %>
+</div>
 
 <div class="large-12 columns">
   <hr>
