--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,10 +1,9 @@
-<h4>Edit Link</h4>
-	<%= render 'edit' %>
-	<p><%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %></p>
+<div class="large-8 columns item_show">
+  <h4>Edit Link</h4>
+  <%= render 'edit' %>
+  <p><%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %></p>
+</div>
 
 <div class="large-12 columns">
   <%= render 'back' %>
 </div>
-
-
-
