--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,6 +6,10 @@ h4 {
   margin: 0px;
 }
 
+ul.no-bullet li:first-child span.label {
+  margin-top: 13px;
+}
+
 .bottom-padding {
   padding-bottom: 100px;
 }
