--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,7 @@
-<div class="large-12 columns header">
-  <div class="large-7 columns">
-    <h3>Welcome to Scrappy.be</h3>
+<div class="row">
+  <div class="large-12 columns header">
+    <div class="large-7 columns">
+      <h3>Welcome to Scrappy.be</h3>
       <p class="lead">Connect with like minded people to share and discover the links that matter to you.</p>
       <ul class="no-bullet">
         <li><span class="label">1</span>  Start or join a group.</li>
@@ -9,9 +10,10 @@
         <li><span class="label">4</span>  Chat with other group members.</li>
         <li><span class="label">5</span>  Contemplate existence.</li>
       </ul>
-  </div>
-  <div class="large-5 columns">
-    <h3> Sign up </h3>
-    <%= render 'devise/registrations/new' %>
+    </div>
+    <div class="large-5 columns">
+      <h3> Sign up </h3>
+      <%= render 'devise/registrations/new' %>
+    </div>
   </div>
 </div>
